Centralised SVG cleaning floor to be centred in white space - to fix phone offcentering

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -67,7 +67,7 @@
     margin-top: 0px;
     height: 70vh;
 
-    margin-top: -75px;
+    margin-top: -170px;
   }
 
   .ConstructionPicture{
